Bug fix in the project gallery overlay where the image was not vertically aligned. Also fix several minor visual bug which occur mainly at firefox.

--- a/frontend/styles/components/contact.css
+++ b/frontend/styles/components/contact.css
@@ -33,6 +33,7 @@
 }
 
 .contact_link_icon svg {
+    margin: auto;
     fill: var(--font-color-4);
     transition: fill 0.35s ease;
 }
