--- a/frontend/styles/nav.css
+++ b/frontend/styles/nav.css
@@ -50,8 +50,11 @@ nav {
 .nav_link_wrapper {
     position: relative;
     display: flex;
+    flex-wrap: wrap;
+    height: 29px;
     background-color: var(--background-color-t5);
     border-radius: 30px;
+    overflow: hidden;
 }
 
 .nav_link_item > a {
